# xm_forex

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: python-app.yml
demo-app/: Dockerfile  README.md  database.db  pyproject.toml
demo-app/demo_app/: database.py  main.py  models.py  utils.py
demo-app/tests/: client.py  conftest.py
demo-app/tests/e2e/: database.db  test_main.py
demo-app/tests/integration/test_app/: test_main.py
demo-app/tests/performance/: websocket_usage.py
demo-app/tests/unit/: test_utils.py
project/: Dockerfile  check.sh  requirements.txt
project/app/: main.py
project/tests/integration/test_app/: test_main.py
