[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = "A RESTful API to simulate a Forex trading platform with WebSocket support for real-time order updates."
authors = ["Milan Matyus <matyusmilanattila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
sqlmodel = "^0.0.19"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
black = "^24.4.2"
bandit = "^1.7.9"
isort = "^5.13.2"
safety = "^3.2.3"
ruff = "^0.5.0"
pytest-html = "^4.1.1"
asynctest = "^0.13.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"
trio = "^0.25.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
